feat(skills-sync): add automatic orphaned skills cleanup
- Sync now removes skills from targets that no longer exist in source
- Update SKILL.md with cleanup documentation and output examples
- Change default use_symlinks to false for better compatibility

--- a/skills-sync/config.json
+++ b/skills-sync/config.json
@@ -17,5 +17,5 @@
   },
   "enabled": ["claude", "cursor", "codex", "gemini", "antigravity"],
   "exclude_skills": ["skills-sync"],
-  "use_symlinks": true
+  "use_symlinks": false
 }
